--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Library</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
 <body>
-    
+    <div class="mainContainer">
+        <div class="contentContainer">
+            <div class="textContainer">
+                <div class="stayUpdate"><p class="stayUpdate">Stay updated!</p></div>
+                <div class="join"><p>Join 60,000+ product managers receiving monthly updates on:</p></div>
+                <div class="checkbox">
+                    <div>
+                        <img src="check.png" alt="check" class="check">
+                        <p class="checkboxText">Product discovery and building what matters</p>
+                    </div>
+                    <div>
+                        <img src="check.png" alt="check" class="check">
+                        <p class="checkboxText">Measuring to ensure updates are a success</p>
+                    </div>
+                    <div>
+                        <img src="check.png" alt="check" class="check">
+                        <p class="checkboxText">And much more!</p>
+                    </div>
+                </div>
+                <div class="email">
+                    <div><p class="emailText">Email address</p></div>
+                    <div><input type="email" name="email" class="emailinpt"></div>
+                    <button type="submit" class="subscribeBTN">Subscribe to monthly newsletter</button>
+                </div>
+            </div>
+            <div class="fullIMG">
+                <img src="newsletter.png" alt="newsletter.png" class="newsletter">
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
